--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,4 @@ Author: Shaun Jackman
 Maintainer: Shaun Jackman <sjackman@gmail.com>
 Description: Install software on Mac OS and Linux systems using Homebrew and Linuxbrew.
 License: MIT + file LICENSE
+Imports: dplyr, magrittr, tidyr
